[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lnn-prediction-model"
version = "0.1.0"
description = "Multi-Modal Weather Forecasting System using Liquid Neural Networks (LNN) and Spatial-Temporal Graph Neural Networks (GNN)"
authors = [{ name = "Jhonric Gorillo" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torch_geometric>=2.3.0",
    "ncps>=0.0.5",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "huggingface_hub>=0.20.0",
    "transformers>=4.40.0",
    "bitsandbytes>=0.42.0",
    "peft>=0.10.0",
    "accelerate>=0.28.0",
    "datasets>=2.18.0",
    "trl>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]

